# simple_compose

./: Cargo.toml  README.en_US.md  README.md
src/: chord.rs  duration.rs  lib.rs  main.rs  midi_player.rs  note.rs  tuning.rs
src/composition/: measure.rs  mod.rs  score.rs  track.rs
src/core/: chord.rs  duration.rs  errors.rs  interval.rs  mod.rs  note.rs  scale.rs  tonality.rs  tuning.rs
src/core/chord/: mod.rs
src/midi/: midi_player.rs  mod.rs
tests/: test0.rs  test1.rs
