[package]
name = "simple_compose"
version = "0.1.0"
edition = "2021"
authors = ["Benign X <1341398182@qq.com>"]

[dependencies]
rand = "0.9.0"

mutheors = { git = "https://github.com/W-Mai/mutheors.git", features = ["midi_io"] }

[patch.crates-io]
mutheors = { path = "../mutheors" }

[patch."https://github.com/W-Mai/mutheors.git"]
mutheors = { path = "../mutheors" }
